test/corpus/json_body.txt
=====================
Simple JSON body
=====================
POST http://localhost/

{
  "json_key": "json_value",
  "json_other_key": null
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (string))
      (json_key_value
       (identifier) (null)))))))

=====================
Simple JSON body with new lines
=====================
POST http://localhost/

{
  "json_key": "json_value",

  "json_other_key": null
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (string))
      (json_key_value
       (identifier) (null)))))))

=====================
Empty JSON body
=====================
POST http://localhost/

{
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body (json_object)))))

=====================
Empty JSON body with new line
=====================
POST http://localhost/

{

}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body (json_object)))))


=====================
Empty JSON array
=====================
POST http://localhost/

[
]


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body (json_list)))))

=====================
Empty JSON array with new line
=====================
POST http://localhost/

[

]


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body (json_list)))))


=====================
List JSON body
=====================
POST http://localhost/

[
  "json_key", "key2"
]


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_list
      (string) (string))))))

=====================
JSON array with new lines
=====================
POST http://localhost/

[
  "one",

  "two"
]


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body (json_list (string) (string))))))

=====================
Larger JSON body
=====================
POST http://localhost/

{
  "json_key": "json_value",
  "json_key": "json_value",
  "json_key": "json_value"
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (string))
      (json_key_value
       (identifier) (string))
      (json_key_value
       (identifier) (string)))))))

=====================
One line JSON body
=====================
POST http://localhost/

{"json_key": "json_value"}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (string)))))))

=====================
One line JSON body with random spaces.
=====================
POST http://localhost/

{  "json_key"   : "json_value" }


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (string)))))))

=====================
Nested JSON
=====================
POST http://localhost/

{
  "nested": {
    "json_key": "json_value"
  }
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier)
       (json_object
        (json_key_value
         (identifier)
         (string)))))))))

=====================
JSON body with a json_list
=====================
POST http://localhost/

{
  "json_key": ["first", "second"]
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (json_list (string) (string))))))))

=====================
JSON body with a json_list with one element
=====================
POST http://localhost/

{
  "json_key": [
    "first"
  ]
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (json_list (string))))))))

=====================
JSON body with a json_list with comma on new line
=====================
POST http://localhost/

{
  "json_key": [
    "first"
    , "second"
  ]
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (json_list (string) (string))))))))

=====================
JSON body with an empty json_list
=====================
POST http://localhost/

{
  "json_key": []
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (json_list)))))))

=====================
JSON body with a json_list of objects
=====================
POST http://localhost/

{
  "json_key": [{
    "name": "json_value"
  }, {
    "name": "json_value"
  }]
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier)
       (json_list
        (json_object
         (json_key_value
          (identifier) (string)))
        (json_object
         (json_key_value
          (identifier) (string))))))))))

=====================
JSON body with variable ref instead of number
=====================
POST http://localhost/

{
  "json_key": "json_value",
  "json_key": "json_value",
  "json_key": {{variable}}
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (string))
      (json_key_value
       (identifier) (string))
      (json_key_value
       (identifier) (variable_ref)))))))

=====================
JSON body with escaped double quotes
=====================
POST http://localhost/

{
  "json_key": "jso\"n_value\"",
  "json_other_key": null
}


---

(source_file
  (request
   (start_line (method) (url (rest_of_line)))
   (body
    (json_body
     (json_object
      (json_key_value
       (identifier) (string (escape_sequence) (escape_sequence)))
      (json_key_value
       (identifier) (null)))))))

